[gd_scene load_steps=4 format=3 uid="uid://c46w3sddtj7rh"]

[ext_resource type="Script" path="res://GameManager.gd" id="1_lmxc0"]
[ext_resource type="PackedScene" uid="uid://cwhqvnby7bxj7" path="res://Player.tscn" id="2_q2hrb"]
[ext_resource type="Script" path="res://UI.gd" id="3_ufqrn"]

[node name="Main" type="Node"]
script = ExtResource("1_lmxc0")

[node name="Background" type="Node2D" parent="."]

[node name="SpaceGradient" type="ColorRect" parent="Background"]
offset_right = 1280.0
offset_bottom = 720.0
color = Color(0.05, 0.05, 0.15, 1)

[node name="GradientOverlay" type="ColorRect" parent="Background"]
offset_right = 1280.0
offset_bottom = 720.0
color = Color(0.1, 0, 0.2, 0.3)

[node name="BottomGlow" type="ColorRect" parent="Background"]
offset_top = 500.0
offset_right = 1280.0
offset_bottom = 720.0
color = Color(0.15, 0.05, 0.25, 0.4)

[node name="Stars" type="CPUParticles2D" parent="Background"]
position = Vector2(640, -10)
amount = 100
lifetime = 20.0
preprocess = 10.0
emission_shape = 3
emission_rect_extents = Vector2(640, 10)
direction = Vector2(0, 1)
spread = 0.0
gravity = Vector2(0, 0)
initial_velocity_min = 20.0
initial_velocity_max = 40.0
scale_amount_min = 1.0
scale_amount_max = 3.0
color = Color(1, 1, 1, 0.8)

[node name="DistantStars" type="CPUParticles2D" parent="Background"]
position = Vector2(640, -10)
amount = 50
lifetime = 30.0
preprocess = 15.0
emission_shape = 3
emission_rect_extents = Vector2(640, 10)
direction = Vector2(0, 1)
spread = 0.0
gravity = Vector2(0, 0)
initial_velocity_min = 10.0
initial_velocity_max = 15.0
scale_amount_min = 0.5
scale_amount_max = 1.5
color = Color(0.8, 0.8, 1, 0.5)

[node name="BackgroundMusic" type="AudioStreamPlayer" parent="."]
autoplay = true

[node name="Player" parent="." instance=ExtResource("2_q2hrb")]
position = Vector2(640, 600)

[node name="UI" type="CanvasLayer" parent="."]
script = ExtResource("3_ufqrn")

[node name="ScoreLabel" type="Label" parent="UI"]
offset_left = 20.0
offset_top = 20.0
offset_right = 200.0
offset_bottom = 60.0
theme_override_font_sizes/font_size = 24
text = "Score: 0"

[node name="HealthLabel" type="Label" parent="UI"]
offset_left = 20.0
offset_top = 60.0
offset_right = 200.0
offset_bottom = 100.0
theme_override_font_sizes/font_size = 24
text = "Health: 3"

[node name="GameOverPanel" type="Panel" parent="UI"]
visible = false
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -200.0
offset_top = -150.0
offset_right = 200.0
offset_bottom = 150.0
grow_horizontal = 2
grow_vertical = 2

[node name="GameOverLabel" type="Label" parent="UI/GameOverPanel"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -100.0
offset_top = -80.0
offset_right = 100.0
offset_bottom = -40.0
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 32
text = "GAME OVER"
horizontal_alignment = 1

[node name="FinalScoreLabel" type="Label" parent="UI/GameOverPanel"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -100.0
offset_top = -20.0
offset_right = 100.0
offset_bottom = 20.0
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 24
text = "Final Score: 0"
horizontal_alignment = 1

[node name="RestartLabel" type="Label" parent="UI/GameOverPanel"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -100.0
offset_top = 40.0
offset_right = 100.0
offset_bottom = 80.0
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 20
text = "Press R to Restart"
horizontal_alignment = 1
